--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@ Get assets path
           <div class="row">
             <a href="{{ site.company_url }}">
               <div class="col1">
-                <img src="{{ assets }}/img/company_icon.png" height="16" width="16">
+                <img src="{{ assets }}/img/company_icon.gif" height="16" width="16">
                 <span> {{ site.company_name }} </span>
               </div>
             </a>
@@ -149,7 +149,7 @@ Get assets path
           <div class="row">
             <div class="col1">
               <a href="{{ site.company_url }}">
-                  <img src="{{ assets }}/img/company_icon.png" height="16" width="16">
+                  <img src="{{ assets }}/img/company_icon.gif" height="16" width="16">
                   <span> {{ site.company_name }} </span>
               </a>
             </div>
