--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,20 +103,20 @@ Get assets path
             </a> -->
           </div>
 
-          <div class="row">
+          <!-- <div class="row">
             <a href="mailto:{{ site.email }}">
               <div class="col2">
                 <img src="{{ assets }}/img/email_icon_light.png" height="16" width="16">
                 <span> Email </span>
               </div>
-            </a>
+            </a> -->
             <!-- <a href="{{ site.resume_url }}">
               <div class="col2">
                 <img src="{{ assets }}/img/cv_icon_light.png" height="16" width="16">
                 <span> Resume </span>
               </div>
             </a> -->
-          </div>
+          <!-- </div> -->
 
         </div>
 
@@ -149,7 +149,7 @@ Get assets path
           <div class="row">
             <div class="col1">
               <a href="{{ site.company_url }}">
-                  <img src="{{ assets }}/img/company_icon.gif" height="16" width="16">
+                  <!-- <img src="{{ assets }}/img/company_icon.gif" height="16" width="16"> -->
                   <span> {{ site.company_name }} </span>
               </a>
             </div>
@@ -173,20 +173,20 @@ Get assets path
                   </a> -->
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                   <a href="mailto:{{ site.email }}">
                     <div class="col2">
                       <img src="{{ assets }}/img/email_icon_light.png" height="16" width="16">
                       <span> Email </span>
                     </div>
-                  </a>
+                  </a> -->
                   <!-- <a href="{{ site.resume_url }}">
                     <div class="col2">
                       <img src="{{ assets }}/img/cv_icon_light.png" height="16" width="16">
                       <span> Resume </span>
                     </div>
                   </a> -->
-                </div>
+                <!-- </div> -->
         </div>
 
       </div>
