--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -281,15 +281,15 @@ body{
 
 }
 
-#print_block,
+#papers,
 #conferences,
 .edu_block,
 .exp_block,
 .awards_block,
 .skill_block {
-    border-bottom: 1px solid #777676;
-    padding-bottom: 15px;
-    margin-bottom: 25px;
+    border-bottom: 1px solid #a5a4a4;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 /* 最後のセクション(.skill_block)の下にはラインを表示しないようにする */
