--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -297,3 +297,9 @@ body{
     border-bottom: none;
 }
 
+
+/* .skill_block {
+  border-bottom: 1px solid #000f14;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+} */
