--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,12 +95,12 @@ Get assets path
                 <span> Github </span>
               </div>
             </a>
-            <!-- <a href="{{ site.linkedin_url }}">
+            <a href="{{ site.googlescholar_url }}">
               <div class="col2">
-                <img src="{{ assets }}/img/linkedin_icon_light.png" height="16" width="16">
-                <span> LinkedIn </span>
+                <img src="{{ assets }}/img/google-scholar.png" height="16" width="16">
+                <span> Google scholar </span>
               </div>
-            </a> -->
+            </a>
           </div>
 
           <!-- <div class="row">
@@ -165,12 +165,12 @@ Get assets path
                       <span> Github </span>
                     </div>
                   </a>
-                  <!-- <a href="{{ site.linkedin_url }}">
+                  <a href="{{ site.googlescholar_url }}">
                     <div class="col2">
-                      <img src="{{ assets }}/img/linkedin_icon_light.png" height="16" width="16">
-                      <span> LinkedIn </span>
+                      <img src="{{ assets }}/img/google-scholar.png" height="16" width="16">
+                      <span> Google scholar </span>
                     </div>
-                  </a> -->
+                  </a>
                 </div>
 
                 <!-- <div class="row">
