--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -297,6 +297,12 @@ body{
     border-bottom: none;
 }
 
+/* プロフィール写真を円形にするCSS */
+img.center_img {
+  border-radius: 50%; /* 画像を円形にする */
+  object-fit: cover; /* アスペクト比を維持して表示 */
+}
+
 
 /* .skill_block {
   border-bottom: 1px solid #000f14;
