--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,9 +95,10 @@ Get assets path
                 <span> Github </span>
               </div>
             </a>
+            <br />
             <a href="{{ site.googlescholar_url }}">
               <div class="col2">
-                <img src="{{ assets }}/img/google-scholar.png" height="16" width="16">
+                <img src="{{ assets }}/img/google-scholar.svg" height="16" width="16">
                 <span> Google scholar </span>
               </div>
             </a>
@@ -165,9 +166,10 @@ Get assets path
                       <span> Github </span>
                     </div>
                   </a>
+                  <br />
                   <a href="{{ site.googlescholar_url }}">
                     <div class="col2">
-                      <img src="{{ assets }}/img/google-scholar.png" height="16" width="16">
+                      <img src="{{ assets }}/img/google-scholar.svg" height="16" width="16">
                       <span> Google scholar </span>
                     </div>
                   </a>
