--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@ Get assets path
           <h1>{{ site.name }}</h1>
         </div>
 
-        <a href=""><img src="{{ site.logo }}" alt="Logo" class="center_img" ></a>
+        <a href=""><img src="{{ assets }}/img/my_image.JPG" alt="Logo" class="center_img" ></a>
 
         <!-- Position + company -->
         <div class="link_group">
@@ -148,7 +148,7 @@ Get assets path
           <div class="name_header_box">
             <div class="name_header_img">
               <a href="">
-                <img src="{{ site.logo }}" alt="Logo" height="60">
+                <img src="{{ assets }}/img/my_image.JPG" alt="Logo" height="60">
               </a>
             </div>
             <div class="name_header_name">
